--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ collections:
         output: true
         permalink: /wiki/:path/
 
-repository: zyl409214686/zyl409214686.github.io
+repository: zyl409214686.github.io
 
 # ---------------- #
 #      Comments    #
@@ -87,7 +87,7 @@ repository: zyl409214686/zyl409214686.github.io
 comments_provider: gitalk
 # !!!重要!!! 请修改下面这些信息为你自己申请的
 # !!!Important!!! Please modify infos below to yours
-# https://disqus.com
+# https://zouyulong.com
 disqus:
     username: zyl409214686
 # https://imsun.net/posts/gitment-introduction/
