modify user info

--- a/_data/social.yml
+++ b/_data/social.yml
@@ -15,6 +15,6 @@
   url: http://zouyulong.com
 
 - sitename: 微博
-  name: mzlogin
-  url: http://weibo.com/u/1870433533/home?wvr=5&lf=reg
+  name: 好大一只龍
+  url: http://weibo.com/1870433533/profile?topnav=1&wvr=6
 
