修改个人信息

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ baseurl:
 #url: http://mazhuang.org#
 date_format: "ordinal"
 title: android开发录
-subtitle: 请叫我小庞儿 #“逆水行舟 一路前行”
+subtitle: “逆水行舟 一路前行”
 description: “大龙龙龙的个人博客"
 keywords: 大龙龙龙, android开发录
 favicon: /favicon.ico
