--- a/_config.yml
+++ b/_config.yml
@@ -2,12 +2,12 @@
 #   Main Configs   #
 # ---------------- #
 baseurl:
-#url: http://mazhuang.org#
+#url: http://zouyulong.com#
 date_format: "ordinal"
 title: android开发录
-subtitle: “逆水行舟 一路前行”
+subtitle: “逆水行舟、一路前行”
 description: “大龙龙龙的个人博客"
-keywords: 大龙龙龙, android开发录
+keywords: android开发录
 favicon: /favicon.ico
 timezone: Asia/Shanghai
 encoding: "utf-8"
@@ -17,8 +17,6 @@ side_bar_repo_limit: 5
 #      Author      #
 # ---------------- #
 author: ZouYuLong
-# organization: zkh360.com #
-# organization_url: http://www.zkh360.com #
 github_username: zyl409214686
 location: Beijing, China
 email: 409214686@qq.com
@@ -88,6 +86,7 @@ comments_provider: gitalk
 # !!!重要!!! 请修改下面这些信息为你自己申请的
 # !!!Important!!! Please modify infos below to yours
 # https://zouyulong.com
+# todo
 disqus:
     username: zyl409214686
 # https://imsun.net/posts/gitment-introduction/
@@ -95,19 +94,19 @@ gitment:
     owner: zyl409214686
     repo: blog-comments
     oauth:
-        client_id: d2e1cbbd298958076462
-        client_secret: b42a4178e5fd4a7cf63189ef4b1453b05c375709
+        client_id: 716cf0ef86d85e97a210
+        client_secret: 0f503b4d0f4c3f4106e90c1a44994c796909c881
 # https://github.com/gitalk/gitalk#install
 gitalk:
     owner: zyl409214686
     repo: blog-comments
-    clientID: d2e1cbbd298958076462
-    clientSecret: b42a4178e5fd4a7cf63189ef4b1453b05c375709
+    clientID: 716cf0ef86d85e97a210
+    clientSecret: 0f503b4d0f4c3f4106e90c1a44994c796909c881
 # 在使用其它评论组件时可点击显示 Disqus
 lazy_load_disqus : true
 
 # ---------------- #
-#    Analytics     #
+#    Analytics todo     #
 # ---------------- #
 google:
     analytics_id: UA-80669434-1
