add company config

--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,8 @@ side_bar_repo_limit: 5
 #      Author      #
 # ---------------- #
 author: ZouYuLong
+organization: syswin.com
+organization_url: http://www.syswin.com
 github_username: zyl409214686
 location: Beijing, China
 email: 409214686@qq.com
