--- a/_config.yml
+++ b/_config.yml
@@ -101,9 +101,9 @@ gitment:
 # https://github.com/gitalk/gitalk#install
 gitalk:
     owner: zyl409214686
-    repo: blog-comments
-    clientID: 716cf0ef86d85e97a210
-    clientSecret: 0f503b4d0f4c3f4106e90c1a44994c796909c881
+    repo: blog
+    clientID: 34a2a3cd8c69589377af
+    clientSecret: fcaec78f7c49ec06e8e8b2ff5b94d7ae7d7994de
 # 在使用其它评论组件时可点击显示 Disqus
 lazy_load_disqus : true
 
