--- a/_config.yml
+++ b/_config.yml
@@ -105,10 +105,10 @@ gitalk:
     clientID: 34a2a3cd8c69589377af
     clientSecret: fcaec78f7c49ec06e8e8b2ff5b94d7ae7d7994de
 # 在使用其它评论组件时可点击显示 Disqus
-lazy_load_disqus : true
+lazy_load_disqus : false
 
 # ---------------- #
 #    Analytics todo     #
 # ---------------- #
-google:
-    analytics_id: UA-80669434-1
+#google:
+#   analytics_id: UA-80669434-1
